wip: new lens page
