# pkg/api/types.gen.go
@@ -3,6 +3,16 @@
 // Code generated by github.com/deepmap/oapi-codegen/v2 version v2.0.0 DO NOT EDIT.
 package api
 
+// Lens defines model for Lens.
+type Lens struct {
+	Description *string   `json:"description,omitempty"`
+	Id          *string   `json:"id,omitempty"`
+	Name        *string   `json:"name,omitempty"`
+	Owner       *string   `json:"owner,omitempty"`
+	Spec        *string   `json:"spec,omitempty"`
+	Tags        *[]string `json:"tags,omitempty"`
+}
+
 // Pagination defines model for Pagination.
 type Pagination struct {
 	Limit  *int `json:"limit,omitempty"`
